# TemplateHellBase

./: CMakeLists.txt
.github/workflows/: build-pr.yml
cmake/: async-logger.cmake  imgui.cmake  minhook.cmake
src/: common.cpp  common.hpp  main.cpp
src/core/memory/: Pattern.hpp
src/frontend/: GUI.cpp  GUI.hpp
src/frontend/menu/: Menu.cpp  Menu.hpp
src/game/pointers/: Pointer.hpp  PointerCache.cpp  PointerCache.hpp  Pointers.cpp
src/hooking/: BaseHook.cpp  BaseHook.hpp  DetourHook.hpp  Hooking.cpp  Hooking.hpp  MinHook.hpp  VMTHook.hpp
src/hooks/: Hooks.hpp
src/hooks/GUI/: SwapChain.cpp  Window.cpp
src/logger/: LogColor.hpp  LogHelper.cpp  LogHelper.hpp
src/memory/: Module.hpp  ModuleMgr.cpp  ModuleMgr.hpp  Pattern.hpp  PatternScanner.cpp  PatternScanner.hpp  PointerCalculator.hpp
src/pointers/: Pointers.cpp  Pointers.hpp
src/renderer/: Renderer.cpp  Renderer.hpp
src/util/: Joaat.cpp  Joaat.hpp  StrToHex.hpp
